--- a/requirements_temp.txt
+++ b/requirements_temp.txt
@@ -1,6 +1,3 @@
--f https://download.pytorch.org/whl/torch_stable.html
-torch==1.6.0+cpu
-torchvision==0.7.0+cpu
 certifi==2021.5.30
 charset-normalizer==2.0.12
 click==8.0.4
@@ -24,7 +21,12 @@ scikit-learn==0.24.2
 scipy==1.5.4
 six==1.16.0
 threadpoolctl==3.1.0
+torch 
+torchvision
 typing_extensions==4.1.1
 urllib3==1.26.9
 Werkzeug==2.0.3
 zipp==3.6.0
+
+https://download.pytorch.org/whl/cpu/torch-1.7.0%2Bcpu-cp36-cp36m-linux_x86_64.whl
+https://download.pytorch.org/whl/cpu/torchvision-0.8.1%2Bcpu-cp36-cp36m-linux_x86_64.whl
