--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,32 @@
 -f https://download.pytorch.org/whl/torch_stable.html
 torch==1.6.0+cpu
 torchvision==0.7.0+cpu
-numpy
-pandas
-Flask
-scikit-learn
-requests
-Pillow
-gunicorn == 20.0.4
+certifi==2021.5.30
+charset-normalizer==2.0.12
+click==8.0.4
+dataclasses==0.8
+Flask==2.0.3
+future==0.18.2
+gunicorn==20.0.4
+idna==3.3
+importlib-metadata==4.8.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
+joblib==1.1.0
+MarkupSafe==2.0.1
+numpy==1.19.5
+pandas==1.1.5
+Pillow==8.4.0
+python-dateutil==2.8.2
+pytz==2022.1
+requests==2.27.1
+scikit-learn==0.24.2
+scipy==1.5.4
+six==1.16.0
+threadpoolctl==3.1.0
+torch 
+torchvision
+typing_extensions==4.1.1
+urllib3==1.26.9
+Werkzeug==2.0.3
+zipp==3.6.0
