--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 -f https://download.pytorch.org/whl/torch_stable.html
-torch==1.6.0+cpu
-torchvision==0.7.0+cpu
+torch
+torchvision
 numpy
 pandas
 Flask
+https://download.pytorch.org/whl/cpu/torch-1.7.0%2Bcpu-cp36-cp36m-linux_x86_64.whl
+https://download.pytorch.org/whl/cpu/torchvision-0.8.1%2Bcpu-cp36-cp36m-linux_x86_64.whl
 scikit-learn
 requests
 Pillow
