--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,27 @@
--f https://download.pytorch.org/whl/torch_stable.html
-torch
-torchvision
-numpy
-pandas
-Flask
-https://download.pytorch.org/whl/cpu/torch-1.7.0%2Bcpu-cp36-cp36m-linux_x86_64.whl
-https://download.pytorch.org/whl/cpu/torchvision-0.8.1%2Bcpu-cp36-cp36m-linux_x86_64.whl
-scikit-learn
-requests
-Pillow
-gunicorn == 20.0.4
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==8.1.2
+Flask==2.1.1
+gunicorn==20.0.4
+idna==3.3
+importlib-metadata==4.11.3
+itsdangerous==2.1.2
+Jinja2==3.1.1
+joblib==1.1.0
+MarkupSafe==2.1.1
+numpy==1.22.3
+pandas==1.4.2
+Pillow==9.1.0
+python-dateutil==2.8.2
+pytz==2022.1
+requests==2.27.1
+scikit-learn==1.0.2
+scipy==1.8.0
+six==1.16.0
+threadpoolctl==3.1.0
+torch==1.9.0+cpu
+torchvision==0.10.0+cpu
+typing_extensions==4.2.0
+urllib3==1.26.9
+Werkzeug==2.1.1
+zipp==3.8.0
